# Web-Data-Mining-Easy-Lab

lab1/: CMakeLists.txt  README.md  global.hpp  main.cpp
lab1/flow/: 1_load_indices.hpp  2_load_pages.hpp  3_cache_graph.hpp  4_load_cached_graph.hpp  5_analyze_graph.hpp  6_pagerank.hpp
lab1/graph/: graph.hpp  name_map.hpp
lab1/parser/: index.hpp  lex_interface.h  page.hpp  page.lex
lab1/script/: plot.py
lab2/: .gitignore  CMakeLists.txt  README.md  global.hpp  main.cpp
lab2/flow/: 1_load_pages.hpp  2_sample_pages.hpp
lab2/parser/: page_parser.hpp  page_t.hpp
